@@ -1,7 +1,8 @@
 2008-11-22  Krzysztof Burghardt
 
-    * src/clamfs.cxx, src/scancache.cxx, src/scancache.hxx: add negative cache
+    * src/clamfs.cxx, src/scancache.{c|h}xx: add negative cache
     (cache information about infected files)
+    * src/clamfs.cxx, src/stats.{c|h}xx: add filesystem statistics
 
 2007-03-17  Krzysztof Burghardt
 
